--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,8 +1,9 @@
 name: chat_list
 description: A flutter package to incorporate a chat view in a simple way
-version: 0.0.1
-author:
-homepage:
+version: 0.0.1+1
+homepage: "https://github.com/lapadev/chat-list-flutter-package"
+authors:
+  - higorlapaa@gmail.com
 
 environment:
   sdk: ">=2.1.0 <3.0.0"
@@ -10,8 +11,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  bubble: 1.1.9+1
-  flare_flutter: 1.8.3
+  bubble: ^1.1.9+1
+  flare_flutter: ^1.8.3
 
 dev_dependencies:
   flutter_test:
