--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: chat_list
 description: A flutter package to incorporate a chat view in a simple way
-version: 1.0.1
+version: 2.0.0
 homepage: "https://github.com/lapadev/chat-list-flutter-package"
 
 environment:
@@ -9,7 +9,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  bubble: ^1.1.9+1
+  bubble: ^1.2.1
 
 dev_dependencies:
   flutter_test:
